Closed
Bug 329379
Opened 17 years ago
Closed 17 years ago
CRASH reloading/closing range page
Categories
(Core Graveyard :: XForms, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: aaronr, Assigned: smaug)
References
Details
(4 keywords)
Attachments
(2 files)
If I have a simple range in a xform and reload the page a couple of times or even just switch to another page or close the browser, the browser may crash. Crashes during the process of releasing the range object.
load the testcase then keep reloading it. By the 3rd or 4th reload, the browser will crash. I can't recreate on 0.4, but happens all the time on debug trunk after some assertions.
Updated•17 years ago
|
Assignee | ||
Comment 2•17 years ago
|
||
The first change is just a clean up, the fix is the re-ordering of inherited classes.
Assignee | ||
Updated•17 years ago
|
Attachment #215696 -
Flags: review?(allan)
Comment on attachment 215696 [details] [diff] [review] proposed patch Great job figuring this one out! It was a hard one to debug.
Attachment #215696 -
Flags: review?(aaronr) → review+
Comment 4•17 years ago
|
||
Comment on attachment 215696 [details] [diff] [review] proposed patch r*=me
Attachment #215696 -
Flags: review?(allan) → review+
Comment 5•17 years ago
|
||
Checked in on trunk
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Whiteboard: xf-to-branch
Updated•17 years ago
|
Keywords: fixed1.8.0.3,
fixed1.8.1
Updated•17 years ago
|
Whiteboard: xf-to-branch
Updated•6 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•