[XForms] Fix range crash on reloading page. Bug 329379, r=me+aaronr, patch by smaug